fixed minor layout issue with footer in search page and got rid of horizontal scroll

--- a/src/styles/_searchMovies.scss
+++ b/src/styles/_searchMovies.scss
@@ -1,11 +1,11 @@
 .background-styles {
     margin: 0 auto;
     position: absolute;
-    top: 100px;
+    top: 50px;
     background-image: url(../images/background-movies.png);
     background-repeat: no-repeat;
     background-size:cover;
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
     z-index: -1;
     opacity: .3;
@@ -16,7 +16,7 @@
 .container {
     margin:  auto;
     max-width: 100vw;
-    height: auto;
+    height: 100vh;
     padding: 0px 0px;
     z-index: 3;
     filter: revert;
